--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,7 +69,7 @@
 
         <div class = "footer_div">  
            <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://georgree.github.io/">georgree</a> |
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} by <a href="http://georgree.github.io/">georgree</a> |
             
             </p>
         	<div align="right">
